Correct heading size on smaller screen

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -298,7 +298,7 @@ h1 {
   }
 
   .cover-heading {
-    font-size: 7em ;
+    font-size: 5em ;
   }
 
   .colorSlashes,.sectionText {
